<resources>
    <string name="app_name">greenQuest</string>
    <string name="inicio_sesion">Iniciar Sesion</string>
    <string name="descripcion_inicio_sesion">Ingresa tus credenciales para empezar
        a sumar puntos por reciclar</string>
    <string name="username_text">Nombre de Usuario</string>
    <string name="password_text">Contraseña</string>
    <string name="login_button">Iniciar Sesion</string>
    <string name="signup_button">Registrar Usuario</string>
    <string name="password_hint">Distingue entre mayúsculas y minúsculas</string>
    <string name="username_hint">Nombre de usuario</string>
    <string name="link_text_recuperar_contrasenia">Recuperar contraseña</string>
    <string name="link_text_registrar_cuenta">Registrar cuenta</string>
    <string name="used_server">Servidor utilizado</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_recuperar_contrasenia">Recuperar contraseña</string>
    <string name="proximamente">(PROXIMAMENTE)</string>
    <string name="description_recuperar_contrasenia">Ingresa tu correo. Te enviaremos un código para que puedas restablecer tu contraseña</string>
    <string name="label_input_username">Ingrese su correo electrónico</string>
    <string name="cancel">Cancelar</string>
    <string name="button_recuperar_contrasenia">Recuperar contraseña</string>
    <string name="title_activity_ranking_global">ranking_global</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_restablecer_contrasenia">Restablecer contraseña</string>
    <string name="description_restablecer_contrasenia">Ingresa tu correo. Te enviaremos un código para que puedas restablecer tu contraseña</string>
    <string name="label_codigo_contrasenia">Ingrese el código de 6 caracteres</string>
    <string name="hint_codigo_contrasenia">abc123</string>
    <string name="label_nueva_contrasenia">Nueva contraseña</string>
    <string name="label_repita_restablecer_contrasenia">Repita su nueva contraseña</string>
    <string name="button_restablecer_contrasenia">Establecer nueva contraseña</string>
    <string name="label_registrar_cuenta">Registrar cuenta</string>
    <string name="bienvenido_registrar_cuenta">¡Bienvenido a GreenQuest!</string>
    <string name="hint_scan_qr">Centrá el código QR en el recuadro</string>
    <string name="button_escanear_qr">Escanear</string>
    <string name="button_denunciar_categoria">Reportar categoría incorrecta</string>
    <string name="button_continuar">Continuar</string>
    <string name="rankingGeneralButton">Semanal</string>
    <string name="rankingCategorizedButton">Histórico</string>
    <string name="categoryCarton">Cartón</string>
    <string name="categoryPlastico">Plástico</string>
    <string name="categoryVidrio">Vidrio</string>
    <string name="categoryMetal">Metal</string>
    <string name="categoryPapel">Papel</string>
    <string name="categoryTodos">Todos</string>
    <string name="categoryBasura">Basura</string>
    <string name="category_select_hint">Tipo de residuo</string>
    <string name="cerrar_sesion_button">Cerrar sesión</string>
    <string name="mi_pefil">Mi perfil</string>
    <string name="logros_conseguidos">Logros conseguidos</string>
    <string name="acerca_de">Acerca de nosotros</string>
    <string name="logros_faltantes">Logros faltantes</string>
    <string name="marcos_perfil">Marcos de perfil</string>
    <string name="descripcion_hint">Usuario sin descripcion</string>
    <string name="texto_acerca_de">GreenQuest es una aplicación diseñada por Joaquín, Damián y Francisco, tres estudiantes de la Facultad de Informatíca de la UNLP, creada con el objetivo de fomentar el reciclaje y la conciencia ambiental a través de la gamificación.\n\nNuestra misión es hacer que el reciclaje sea divertido y gratificante, motivando a los usuarios a adoptar hábitos sostenibles en su vida diaria mediante el uso de  estaciones de residuos inteligentes creadas para este propósito.
    </string>
    <string name="title_bottom_ranking">Rankings</string>
    <string name="title_bottom_store">Tienda</string>
    <string name="title_bottom_scanner">Escanear</string>
    <string name="title_bottom_report">Reportar</string>
    <string name="title_bottom_trivia">Trivia</string>
    <string name="title_bottom_estadistica">Estadísticas</string>
    <string name="button_responder_pregunta">Responder</string>
    <string name="placeholder_pregunta">Cargando pregunta</string>
    <string name="unregisteredWeeklyActivity">No se registró actividad en la semana actual, ¡se el primero en hacerlo!</string>
    <string name="title_historial_residuos">Historial de residuos</string>
    <string name="link_toda_mi_actividad">Toda mi actividad -></string>
    <string name="title_tipos_residuos_por_periodo">Tipos de residuos por período</string>
    <string name="title_historial_de_puntaja">Historial de puntaje</string>
    <string name="title_fecha_de_inicio">Fecha de inicio</string>
    <string name="title_fecha_de_fin">Fecha de fin</string>
    <string name="volver">&lt;- Volver</string>
    <string name="tab_title_de_hoy">Hoy</string>
    <string name="tab_title_ultima_semana">Última semana</string>
    <string name="tab_title_del_mes">Este mes</string>
    <string name="tab_title_del_año">Este año</string>
    <string name="tab_historico">Histórico</string>
    <string name="camera_permission_required">Permiso de cámara requerido</string>
    <string name="give_permission">Dar permisos</string>
    <string name="every_question_right">Impresionante. Respondiste bien todas las preguntas</string>
    <string name="you_recycled">Reciclaste: %1$s</string>
    <string name="congratulations_you_gained">"¡Felicidades! Sumaste"</string>
    <string name="points">puntos</string>
    <string name="ranking_position">Ranking #%1$d</string>
    <string name="x_points">%1$d\npuntos</string>
    <string name="advertencia_reporte_1">1. Las imágenes que subas serán de uso compartido. No incluyas datos sensibles (identificaciones, menores de edad, tarjetas de crédito....).</string>
    <string name="advertencia_reporte_2">2. Por favor, trata de centrar bien el residuo en la foto.</string>
    <string name="title_button_enviar_reporte">Enviar Reporte</string>
    <string name="vista_previa_de_imagen_para_reporte">Vista previa de imagen para reporte</string>
    <string name="hint_correct_category">Clasificación correcta</string>
    <string name="title_reportar">Reportar residuo mal clasificado</string>
    <string name="texto_boton_camara">Tomar foto del residuo</string>
    <string name="tab_residuos_todos">Todos los residuos</string>
    <string name="tab_residuos_reporte_pendiente">Reportes pendientes</string>
    <string name="tab_residuos_reporte_exitoso">Reportes éxitosos</string>
    <string name="tab_residuos_reporte_fallido">Reportes fallidos</string>
    <string name="sin_residuos_para_mostrar">No hay residuos para mostrar</string>
    <string name="informe_del_reporte">Informe del reporte</string>
    <string name="clasificacion_reportada_como_correcta">Clasificación reportada como correcta</string>
    <string name="button_title_eliminar_reporte">Eliminar reporte</string>
    <string name="report">Reportar</string>
    <string name="see_report">Ver reporte</string>
    <string name="profile_image">Imagen de Perfil</string>
    <string name="placeholder_article_name">Nombre de un articulo</string>
    <string name="placeholder_article_price">100000</string>
    <string name="placeholder_article_image_description">Imagen Artículo</string>
    <string name="score_image">Imagen de puntos</string>
    <string name="map_access_button">Botón de acceso al mapa</string>
    <string name="fragmenttitle_placeholder">FragmentTitle</string>
    <string name="profile_access_button">Botón de acceso al perfil</string>
    <string name="achivement_image">Imagen del logro</string>
    <string name="achivement_name_placeholder">Nombre del logro</string>
    <string name="achivement_description_placeholder">Descripción del logro</string>
    <string name="trace_route_button">Botón de trazar ruta</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="hello_world_placeholder">Hola mundo</string>
    <string name="return_button">Volver</string>
    <string name="app_settings">Configuracion de la aplicacion</string>
    <string name="accound_settings">Configuracion de la cuenta</string>
    <string name="important_advice">¡Aviso Importante!</string>
</resources>