<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/topGlobalFragment"
        android:icon="@drawable/trofeo"
        android:title="@string/title_bottom_ranking" />
    <item
        android:id="@+id/tiendaFragment"
        android:icon="@drawable/icono_tienda"
        android:title="@string/title_bottom_store"
        android:iconTint="@color/texto_oscuro"/>
    <item
        android:id="@+id/escanearFragment"
        android:icon="@drawable/escanear"
        android:title="@string/title_bottom_scanner"/>
    <item
        android:id="@+id/estadisticasFragment"
        android:icon="@drawable/icono_estadisticas"
        android:title="@string/title_bottom_estadistica"/>
    <item
        android:id="@+id/triviaFragment"
        android:icon="@drawable/icono_trivia"
        android:title="@string/title_bottom_trivia"
    />

</menu>
