<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    app:layout_anchorGravity="center">
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_ultima_actividad"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/white_card"
        android:backgroundTint="@color/fondo_secundario"
        app:cardCornerRadius="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <RelativeLayout
                android:id="@+id/layout_volver_reporte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toTopOf="parent">
                <TextView
                    android:id="@+id/link_volver_reporte"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="false"
                    android:layout_alignParentStart="true"
                    android:text="@string/volver"
                    android:textColor="@color/accent_color"
                    android:clickable="true"
                    android:textSize="24sp"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/title_reportar_residuo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:background="@color/fondo_secundario"
                android:gravity="center"
                android:text="@string/title_reportar"
                android:textColor="@color/accent_color"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/layout_volver_reporte" />

            <LinearLayout
                android:id="@+id/banner_advertencia"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/white_card"
                android:backgroundTint="@color/texto_naranja"
                android:orientation="vertical"
                android:padding="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_reportar_residuo">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/important_advice"
                    android:textColor="@color/texto_oscuro"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:drawablePadding="8dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/advertencia_reporte_1"
                    android:textColor="@color/texto_oscuro"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/advertencia_reporte_2"
                    android:textColor="@color/texto_oscuro"
                    android:textSize="13sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/image_thumbnail_reportar_informe"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/vista_previa_de_imagen_para_reporte"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/banner_advertencia"
                app:layout_constraintBottom_toTopOf="@+id/botones"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/botones"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                >
                <Button
                    android:id="@+id/button_abrir_camara_reporte"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/texto_boton_camara"
                    android:backgroundTint="@color/acento_de_fondo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image_thumbnail_reportar_informe" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/categorySelection"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:spacing="15dp"
                    android:textColorHint="@color/texto_sobre_acento_de_fondo"
                    app:hintTextColor="@color/texto_sobre_acento_de_fondo"
                    android:hint="@string/hint_correct_category"
                    app:boxBackgroundColor="@color/acento_de_fondo"
                    app:selectionRequired="true"
                    app:singleSelection="true">

                    <AutoCompleteTextView
                        android:id="@+id/categorySelectionTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:inputType="none"
                        android:popupBackground="@drawable/selector_background"
                        android:textColor="@color/texto_sobre_acento_de_fondo"
                        android:title="@string/category_select_hint"
                        tools:ignore="LabelFor" />

                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/button_enviar_reporte"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:background="@color/accent_color"
                    android:text="@string/title_button_enviar_reporte"/>
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>