<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/radius_color_secundario">

        <ImageView
            android:id="@+id/map"
            android:layout_width="53dp"
            android:layout_height="53dp"
            android:layout_marginStart="16dp"
            android:padding="5dp"
            android:contentDescription="@string/map_access_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/icono_mapa"
            android:clickable="true"
            app:tint="#CAD3F5" />

        <TextView
            android:id="@+id/nombreFragmentActualTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragmenttitle_placeholder"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/miPerfil"
            android:layout_width="53dp"
            android:layout_height="53dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/profile_access_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/outline_person_24"
            android:clickable="true"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/frame_container"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_navigation"
        android:layout_below="@id/toolbar_container"
        app:defaultNavHost="true"
        app:navGraph="@navigation/nav_graph" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:elevation ="8dp"
        app:menu="@menu/bottom_navigation"
        app:labelVisibilityMode="selected"
        />



</RelativeLayout>